[gd_scene load_steps=12 format=3 uid="uid://ctyixwmxls1xf"]

[ext_resource type="PackedScene" uid="uid://bc2ej70xjolx2" path="res://LeftShoe.tscn" id="1_y7bk3"]
[ext_resource type="PackedScene" uid="uid://dmw176204y7dd" path="res://RightShoe.tscn" id="2_e3tf4"]
[ext_resource type="Script" uid="uid://cqyv41oyv0lcg" path="res://CharBody.gd" id="3_m64x7"]
[ext_resource type="Script" uid="uid://c63kxpwm4xegy" path="res://marker_2d.gd" id="4_t0gij"]
[ext_resource type="Script" uid="uid://qjt0l3kan22g" path="res://camera_2d.gd" id="5_qhx67"]
[ext_resource type="Script" uid="uid://g7fnkyhbdemq" path="res://hp_left.gd" id="6_eklly"]
[ext_resource type="Script" uid="uid://clxhegpqyijug" path="res://xp_to_level.gd" id="7_txm64"]
[ext_resource type="PackedScene" uid="uid://c5nunyagwdk5f" path="res://pause_menu.tscn" id="8_2ujkx"]
[ext_resource type="PackedScene" uid="uid://ct4uhithfj3kk" path="res://level_up_screen.tscn" id="9_5701o"]
[ext_resource type="Script" uid="uid://bjf8casb61ncs" path="res://game_over.gd" id="10_neqtn"]
[ext_resource type="PackedScene" uid="uid://dmant07862ycy" path="res://torso.tscn" id="11_umaqk"]

[node name="RogueB" type="CharacterBody2D"]
visibility_layer = 2
metadata/Player = true

[node name="LeftShoe" parent="." instance=ExtResource("1_y7bk3")]
unique_name_in_owner = true
visibility_layer = 2
texture_filter = 1

[node name="RightShoe" parent="." instance=ExtResource("2_e3tf4")]
unique_name_in_owner = true
visibility_layer = 2
position = Vector2(32, 0)

[node name="CharBody" type="Line2D" parent="."]
unique_name_in_owner = true
visibility_layer = 2
points = PackedVector2Array(0, 0, 32, 0)
default_color = Color(0.632317, 0.237724, 0.330408, 1)
script = ExtResource("3_m64x7")

[node name="Marker2D" type="Marker2D" parent="CharBody"]
script = ExtResource("4_t0gij")

[node name="Camera2D" type="Camera2D" parent="CharBody/Marker2D"]
ignore_rotation = false
zoom = Vector2(2, 2)
position_smoothing_enabled = true
position_smoothing_speed = 10.0
rotation_smoothing_enabled = true
rotation_smoothing_speed = 3.0
script = ExtResource("5_qhx67")

[node name="LabelHealthLeft" type="Label" parent="CharBody/Marker2D/Camera2D"]
offset_left = -286.0
offset_top = -160.0
offset_right = -234.0
offset_bottom = -137.0
text = "Health left:"
metadata/_edit_use_anchors_ = true

[node name="HPLeft" type="Label" parent="CharBody/Marker2D/Camera2D"]
offset_left = -190.0
offset_top = -160.0
offset_right = -150.0
offset_bottom = -137.0
text = "10"
script = ExtResource("6_eklly")
metadata/_edit_use_anchors_ = true

[node name="LabelXPLeft" type="Label" parent="CharBody/Marker2D/Camera2D"]
offset_left = -286.0
offset_top = -136.0
offset_right = -162.0
offset_bottom = -113.0
text = "XP until NL:"

[node name="XPToLevel" type="Label" parent="CharBody/Marker2D/Camera2D"]
offset_left = -190.0
offset_top = -137.0
offset_right = -150.0
offset_bottom = -114.0
text = "10"
script = ExtResource("7_txm64")
metadata/_edit_use_anchors_ = true

[node name="Pause menu" parent="CharBody/Marker2D/Camera2D" instance=ExtResource("8_2ujkx")]
visible = false
z_index = 1

[node name="LevelUpScreen" parent="CharBody/Marker2D/Camera2D" instance=ExtResource("9_5701o")]
process_mode = 2
visible = false
z_index = 1
offset_left = -288.0
offset_top = -161.0
offset_right = -288.0
offset_bottom = -161.0

[node name="GameOver" type="CanvasLayer" parent="CharBody/Marker2D"]
process_mode = 2
visible = false
script = ExtResource("10_neqtn")

[node name="ColorRect" type="ColorRect" parent="CharBody/Marker2D/GameOver"]
offset_left = -5.0
offset_top = -9.0
offset_right = 1159.0
offset_bottom = 659.0
color = Color(0.152941, 0.168627, 0.188235, 0.894118)
metadata/_edit_use_anchors_ = true

[node name="LabelGameOver" type="Label" parent="CharBody/Marker2D/GameOver/ColorRect"]
layout_mode = 0
offset_left = 137.0
offset_top = 212.0
offset_right = 1038.0
offset_bottom = 417.0
theme_override_font_sizes/font_size = 150
text = "GAME OVER!"
metadata/_edit_use_anchors_ = true

[node name="LabelBulletsDodged" type="Label" parent="CharBody/Marker2D/GameOver/ColorRect"]
visible = false
layout_mode = 0
offset_left = 364.0
offset_top = 434.0
offset_right = 736.0
offset_bottom = 503.0
theme_override_font_sizes/font_size = 50
text = "Bullets dodged: "

[node name="LabelEnemiesKilled" type="Label" parent="CharBody/Marker2D/GameOver/ColorRect"]
visible = false
layout_mode = 0
offset_left = 377.0
offset_top = 434.0
offset_right = 737.0
offset_bottom = 503.0
theme_override_font_sizes/font_size = 50
text = "Enemies killed: "

[node name="Label" type="Label" parent="CharBody/Marker2D/GameOver/ColorRect"]
layout_mode = 0
offset_left = 481.0
offset_top = 566.0
offset_right = 699.0
offset_bottom = 589.0
text = "(Esc to exit, space to restart)"

[node name="Torso" parent="." instance=ExtResource("11_umaqk")]
unique_name_in_owner = true
position = Vector2(16, -1)

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="timeout" from="Timer" to="CharBody" method="_on_timer_timeout"]
